docs: lesson end refactor code
